# SwIC

./: .gitignore  README.md  device_manager.cpp  device_manager.h  main.cpp  meson.build
src/: config.cpp  config.h  main.cpp
src/gui/: DeviceEditor.cpp  MenuBar.cpp  gui.cpp  gui.h
subprojects/: imguiwrapper.wrap
